2008-11-17  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* graphops.tcl: Continued integration of graph algorithms. Euler
	* graphops.man: paths and tours. Bumped the package version
	* graph/tests/ops/eulertour.test: to 0.7.
	* graph/tests/ops/eulerpath.test: 
	* graph/tests/XOpsControl:
	* graph/tests/XOpsSetup:
	* graph/tests/XOpsSupport:
	* pkgIndex.tcl:

2008-11-14  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* graphops.tcl: Continued integration of graph algorithms. More
	* graphops.man: about connectivity. Bumped the package version
	* graph/tests/ops/connected.test: to 0.6.
	* graph/tests/ops/cutvertex.test: 
	* graph/tests/ops/bridge.test: 
	* graph/tests/XOpsControl:
	* pkgIndex.tcl:

2008-11-13  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* graphops.tcl: Continued integration of graph algorithms.
	* graphops.man: Connected components. Bumped package version
	* graph/tests/ops/components.test: to 0.5.
	* graph/tests/ops/componentof.test: 
	* graph/tests/XOpsControl:
	* graph/tests/XOpsSetup:
	* graph/tests/XOpsSupport:
	* pkgIndex.tcl:

2008-11-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* graphops.tcl: Continued integration of graph algorithms.
	* graphops.man: SCCs via Tarjan. Placeholder for max matching.
	* graph/tests/ops/tarjan.test: Bumped version to 0.4.
	* graph/tests/ops/maxmatching.test:
	* graph/tests/XOpsControl:
	* graph/tests/XOpsSetup:
	* graph/tests/XOpsSupport:
	* pkgIndex.tcl:

2008-11-08  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* graphops.tcl: Continued integration of graph algorithms.
	* graphops.man: Test for bipartite graph. Bumped version
	* graph/tests/ops/bipartite.test: to 0.3
	* graph/tests/XOpsControl:
	* graph/tests/XOpsSetup:
	* graph/tests/XOpsSupport:
	* pkgIndex.tcl:

2008-11-07  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* graphops.tcl: Continued integration of graph algorithms.