@@ -4,7 +4,7 @@
 # Copyright (c) 2008 Andreas Kupries <andreas_kupries@users.sourceforge.net>
 # All rights reserved.
 #
-# RCS: @(#) $Id: XOpsControl,v 1.8 2008/11/18 03:49:57 andreas_kupries Exp $
+# RCS: @(#) $Id: XOpsControl,v 1.9 2008/11/19 07:39:33 andreas_kupries Exp $
 
 # -------------------------------------------------------------------------
 
@@ -28,5 +28,6 @@ source ${SELF}/ops/cutvertex.test   ; # Node a cut vertex?
 source ${SELF}/ops/bridge.test      ; # Arc a bridge?
 source ${SELF}/ops/eulertour.test   ; # Eulerian graphs
 source ${SELF}/ops/eulerpath.test   ; # Semi-eulerian graphs
+source ${SELF}/ops/dijkstra.test    ; # Node distances by Dijkstra
 
 # -------------------------------------------------------------------------
