@@ -1,3 +1,12 @@
+2008-11-18  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
+
+	* graphops.tcl: Continued integration of graph algorithms. Node
+	* graphops.man: distances, dijkstra's algorithm. Bumped the
+	* graph/tests/ops/disjkstra.test: package version to 0.8.
+	* graph/tests/XOpsControl:
+	* graph/tests/XOpsSetup:
+	* pkgIndex.tcl:
+
 2008-11-17  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	* graphops.tcl: Continued integration of graph algorithms. Euler
